header done and section a started

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link rel="stylesheet" href="./src/scss/main.scss" />
+    <!-- <script defer src="./src/js/script.js"></script> -->
     <title>TPSIT | Unione Europea</title>
   </head>
   <body>
-    <header id="header">
+    <header id="header" class="center">
       <nav id="main-navbar">
         <div class="container nav-container">
           <div class="logo">
@@ -33,11 +34,74 @@
           <ul class="list">
             <li><a class="current" href="#">Home</a></li>
             <li><a href="#">Info</a></li>
+            <li><a href="#">Organi</a></li>
             <li><a href="#">Vaccini</a></li>
-            <li><a href="#">Contatti</a></li>
           </ul>
         </div>
       </nav>
+
+      <div class="container">
+        <div class="section-content">
+          <h1>L'Europa è <span class="text">Fratellanza</span></h1>
+          <p class="p-lead">
+            Dal 1992 l'Unione Europea unisce sotto un'unica bandiera i Paesi più
+            importanti d'Europa
+          </p>
+          <a class="btn" href="#"
+            ><i class="fas fa-chevron-right"></i> Scopri di più</a
+          >
+        </div>
+      </div>
     </header>
+
+    <!-- Section A: Info -->
+    <section id="home-a" class="py-2 bg-light center">
+      <div class="container">
+        <h1>Cos'è l'Unione Europea?</h1>
+        <div class="bottom-line"></div>
+        <p class="p-lead">
+          L'Unione Europea (UE) è un'organizzazione politica ed economica a
+          carattere sovranazionale, che comprende 27 stati membri d'Europa
+        </p>
+        <div class="grid-container py-1">
+          <div>
+            <i class="fas fa-globe-europe fa-3x"></i>
+            <h2>Fratellanza</h2>
+            <p>
+              L’Unione Europea mira ad abbattere ogni barriera che tiene divisi
+              i popoli e, di conseguenza, promuovere la fratellanza fra tutte le
+              etnie presenti in Europa.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-handshake fa-3x"></i>
+            <h2>Libertà</h2>
+            <p>
+              L’Unione Europea mira ad abbattere ogni barriera che tiene divisi
+              i popoli e, di conseguenza, promuovere la fratellanza fra tutte le
+              etnie presenti in Europa.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-balance-scale fa-3x"></i>
+            <h2>Uguaglianza</h2>
+            <p>
+              L’Unione Europea mira ad abbattere ogni barriera che tiene divisi
+              i popoli e, di conseguenza, promuovere la fratellanza fra tutte le
+              etnie presenti in Europa.
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-peace fa-3x"></i>
+            <h2>Pace</h2>
+            <p>
+              L’Unione Europea mira ad abbattere ogni barriera che tiene divisi
+              i popoli e, di conseguenza, promuovere la fratellanza fra tutte le
+              etnie presenti in Europa.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
