--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link rel="stylesheet" href="./src/scss/main.scss" />
-    <!-- <script defer src="./src/js/script.js"></script> -->
+    <script defer src="./src/js/script.js"></script>
     <title>TPSIT | Unione Europea</title>
   </head>
   <body>
