important features added

--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
             <span class="letter">E</span>UROPEA
           </div>
           <div class="socials">
-            <a href="https://facebook.com"
+            <a href="https://facebook.com" class="fb"
               ><i class="fab fa-facebook fa-2x"></i
             ></a>
-            <a href="https://twitter.com"
+            <a href="https://twitter.com" class="tw"
               ><i class="fab fa-twitter fa-2x"> </i
             ></a>
-            <a href="https://instagram.com"
+            <a href="https://instagram.com" class="insta"
               ><i class="fab fa-instagram fa-2x"></i
             ></a>
           </div>
           <ul class="list">
-            <li><a class="current" href="#">Home</a></li>
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Organi</a></li>
-            <li><a href="#">Vaccini</a></li>
+            <li><a class="current" href="#header">Home</a></li>
+            <li><a href="home-a">Info</a></li>
+            <li><a href="home-b">Organi</a></li>
+            <li><a href="home-c">Vaccini</a></li>
           </ul>
         </div>
       </nav>
@@ -57,7 +57,7 @@
     <!-- Section A: Info -->
     <section id="home-a" class="py-2 bg-light center">
       <div class="container">
-        <h1>Cos'è l'Unione Europea?</h1>
+        <h1 class="logo">Cos'è l'Unione Europea?</h1>
         <div class="bottom-line"></div>
         <p class="p-lead">
           L'Unione Europea (UE) è un'organizzazione politica ed economica a
@@ -173,8 +173,36 @@
       </div>
     </section>
 
-    <section id="home-c">
-      <div class="container"></div>
+    <section id="home-c" class="py-1">
+      <div class="container">
+        <h1 class="logo">Situazione vaccini Unione Europea</h1>
+        <div class="bottom-line"></div>
+        <div class="section-grid py-1">
+          <!-- <div class="vaccine-container">
+            <div class="first-part">
+              <div class="country-name">Italia</div>
+              <div class="country-total-vaccines fx-center">💉 100.908.203</div>
+            </div>
+            <div class="second-part">
+              <div class="today mt-1 fx-vcenter">Oggi:</div>
+              <div class="daily-vaccines mt-1 fx-hcenter">+278.980</div>
+            </div>
+          </div> -->
+        </div>
+      </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="main-footer">
+      <div class="footer-content container">
+        <p>Copyright &copy; 2021. All Rights Reserved</p>
+        <div class="social">
+          <i class="fa-twitter fab"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
