--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             Dal 1992 l'Unione Europea unisce sotto un'unica bandiera i Paesi più
             importanti d'Europa
           </p>
-          <a class="btn" href="#"
+          <a class="btn discover-btn" href="#"
             ><i class="fas fa-chevron-right"></i> Scopri di più</a
           >
         </div>
