--- a/index.html
+++ b/index.html
@@ -78,32 +78,34 @@
           <i class="fas fa-handshake fa-3x"></i>
           <h2>Libertà</h2>
           <p>
-            L’Unione Europea mira ad abbattere ogni barriera che tiene divisi i
-            popoli e, di conseguenza, promuovere la fratellanza fra tutte le
-            etnie presenti in Europa.
+            L'Unione Europea tutela la libertà individuale di ogni individuo.
+            Non a caso, il primo articolo della Dichiarazione Universale dei
+            Diritti Umani riguada proprio la libertà.
           </p>
         </div>
         <div>
           <i class="fas fa-balance-scale fa-3x"></i>
           <h2>Uguaglianza</h2>
           <p>
-            L’Unione Europea mira ad abbattere ogni barriera che tiene divisi i
-            popoli e, di conseguenza, promuovere la fratellanza fra tutte le
-            etnie presenti in Europa.
+            Nell'Unione Europea ogni persona può considerarsi uguale alle altre.
+            Come per il principio della fratellanza, anche in questo caso l'UE
+            incentiva l'Uguaglianza attraverso eventi, manifestazioni e
+            legislazioni.
           </p>
         </div>
         <div>
           <i class="fas fa-peace fa-3x"></i>
           <h2>Pace</h2>
           <p>
-            L’Unione Europea mira ad abbattere ogni barriera che tiene divisi i
-            popoli e, di conseguenza, promuovere la fratellanza fra tutte le
-            etnie presenti in Europa.
+            La pace, per l'Unione Europea, è da sempre un obiettivo di primaria
+            importanza. Attraverso le sue numerose organizzazioni, l'UE cerca di
+            garantire la pacificità in ogni Paese europeo.
           </p>
         </div>
       </div>
     </section>
 
+    <!-- Section B: Institutions -->
     <section id="home-b" class="py-2">
       <div class="container">
         <div class="content-container">
@@ -173,6 +175,7 @@
       </div>
     </section>
 
+    <!-- Section C: Vaccines -->
     <section id="home-c" class="py-1">
       <div class="container">
         <h1 class="logo">Situazione vaccini Unione Europea</h1>
