--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="./src/scss/main.scss" />
     <script defer src="./src/js/script.js"></script>
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <title>TPSIT | Unione Europea</title>
   </head>
   <body>
