--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             </div>
           </div> -->
         </div>
+        <div class="latest-update"></div>
       </div>
     </section>
 
