--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <link rel="stylesheet" href="./src/scss/main.scss" />
+    <link rel="stylesheet" href="./src/scss/media.scss" />
     <script defer src="./src/js/script.js"></script>
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <title>TPSIT | Unione Europea</title>
